add link to paper on title slide

--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h2 style="padding-top: 100px;">
+					<h2 style="padding-top: 30px;">
 						Investigating the conformal behaviour of SU(2)<br>with one adjoint Dirac flavor
 					</h2>
 					<h3>
 						Ed Bennett, Andreas Athenodorou, Georg Bergner, Biagio Lucini
 					</h3>
-					<p style="padding-top: 80px">Lattice 2021, 2021-07-30</p>
+					<p style="padding-top: 40px">Lattice 2021, 2021-07-30</p>
+					<p style="padding-top: 40px">Paper: <a href="https://arxiv.org/abs/2103.10485">2103.10485</a></p>
 					<p>Slides: <a href="https://edbennett.github.io/lattice2021-talk">https://edbennett.github.io/lattice2021-talk</a></p>
-					<div style="padding-top: 80px;">
+					<div style="padding-top: 40px;">
 						<a href="https://www.swansea.ac.uk">
 							<img class="plain title-image" src='images/su-vstack-white.svg' alt="Swansea University logo">
 						</a>
