add link to data package

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						Ed Bennett, Andreas Athenodorou, Georg Bergner, Biagio Lucini
 					</h3>
 					<p style="padding-top: 40px">Lattice 2021, 2021-07-30</p>
-					<p style="padding-top: 40px">Paper: <a href="https://arxiv.org/abs/2103.10485">2103.10485</a></p>
+					<p style="padding-top: 40px">Paper: <a href="https://arxiv.org/abs/2103.10485">arXiv:2103.10485</a> • Data: <a href="https://zenodo.org/record/5139618">doi:10.5281/zenodo.5139617</a></p>
 					<p>Slides: <a href="https://edbennett.github.io/lattice2021-talk">https://edbennett.github.io/lattice2021-talk</a></p>
 					<div style="padding-top: 40px;">
 						<a href="https://www.swansea.ac.uk">
